--- a/UI/login.html
+++ b/UI/login.html
@@ -3,14 +3,14 @@
 
         <title>Store Manager</title>
 
-<link rel = "stylesheet" href="css/login.css">
+<link rel = "stylesheet" href="../css/login.css">
 <div class="img">
 
     <img src="images/images.jpg">
 </div>
 
     </head>
-        <body>
+        <body background = "../image/images.jpg">
         <div class = "boxed">
             <h1>LOGIN</h1>  
             
