--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel = "stylesheet" href="../css/style.css">
+        <link rel = "stylesheet" href="css/style.css">
     </head>
     <body background = "../image/images.jpg">
         
