--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Home</title>
         <link rel = "stylesheet" href="css/style.css">
     </head>
-    <body background = "../image/images.jpg">
+    <body background = "image/images.jpg">
         
         <h1><i>Candiez Store</i></h1>
     
