--- a/UI/add.html
+++ b/UI/add.html
@@ -10,6 +10,7 @@
                         <li><a href="view_products.html">Products</a></li>
                         <li><a href="sales.html">Sales</a></li>
                         <li><a href="add.html">Add</a></li>
+                        <li><a href="index.html">Logout</a></li>
                         
                     </ul>
                 </div>
