--- a/UI/edit.html
+++ b/UI/edit.html
@@ -10,6 +10,7 @@
                         <li><a href="sales.html">Sales</a></li>
                         <li><a href="add.html">Add</a></li>
                         <li><a href="edit.html">Edit</a></li>
+                        <li><a href="index.html">Logout</a></li>
                     </ul>
                 </div>
         
