--- a/add.html
+++ b/add.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <title>Add Products</title>
-        <link rel="stylesheet" href="../css/add.css">
+        <link rel="stylesheet" href="css/add.css">
     </head>
-    <body background = "../image/images.jpg">
+    <body background = "image/images.jpg">
             <div class = "topnav">
                     <ul>
                         
