--- a/edit.html
+++ b/edit.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <title>Edit products</title>
-        <link rel = "stylesheet" href="../css/edit.css">
+        <link rel = "stylesheet" href="css/edit.css">
     </head>
-    <body background = "../image/images.jpg">
+    <body background = "image/images.jpg">
             <div class = "topnav">
                     <ul>
                         <li><a href="view_products.html">Products</a></li>
