--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 
         <title>Store Manager</title>
 
-<link rel = "stylesheet" href="../css/login.css">
+<link rel = "stylesheet" href="css/login.css">
 <div class="img">
 
     <img src="images/images.jpg">
