--- a/login2.html
+++ b/login2.html
@@ -3,11 +3,11 @@
 
         <title>Store Manager</title>
 
-<link rel = "stylesheet" href="../css/login2.css">
+<link rel = "stylesheet" href="css/login2.css">
 
 
     </head>
-        <body background = "../image/images.jpg">
+        <body background = "image/images.jpg">
         <div class = "boxed">
             <h1>LOGIN</h1>  
             
