--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
         <link rel='stylesheet' href="css/register.css"/>
         
     </head>
-    <body background = "images.jpg">
+    <body background = "image/images.jpg">
             <h1><i>REGISTER</i></h1>
 
          
