--- a/view_products.html
+++ b/view_products.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <title>Available products</title>
-        <link rel="stylesheet" href="../css/view_products.css">
+        <link rel="stylesheet" href="css/view_products.css">
     </head>
-    <body background = "../image/images.jpg">
+    <body background = "image/images.jpg">
             <div class = "topnav">
                     <ul>
                         <li><a href="view_products.html">Products</a></li>
