--- a/sales.html
+++ b/sales.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel = "stylesheet" href="../css/sales.css">
+        <link rel = "stylesheet" href="css/sales.css">
     </head>
-    <body background = "../image/images.jpg">
+    <body background = "image/images.jpg">
             <div class = "topnav">
                     <ul>
                         <li><a href="view_products.html">Products</a></li>
