login final edit

--- a/login.html
+++ b/login.html
@@ -4,13 +4,10 @@
         <title>Store Manager</title>
 
 <link rel = "stylesheet" href="css/login.css">
-<div class="img">
 
-    <img src="images/images.jpg">
-</div>
 
     </head>
-        <body background = "../image/images.jpg">
+        <body background = "image/images.jpg">
         <div class = "boxed">
             <h1>LOGIN</h1>  
             
