--- a/add.html
+++ b/add.html
@@ -16,7 +16,7 @@
                 </div>
         
             <div class="form_group">
-                <form action="view_products.html" method="POST">
+                <form action="view_products.html" method="post">
                     <label>PRODUCT NAME</label><br>
                     <input name="product_name" type="text" value=""/><br><br>
                     <label>PRODUCT ID</label><BR>
