--- a/add.html
+++ b/add.html
@@ -18,11 +18,11 @@
             
                 <div>
                     <label>PRODUCT NAME</label><br>
-                    <input name="product_name" type="hidden" value=""/><br><br>
+                    <input name="product_name" type="text" value=""/><br><br>
                     <label>PRODUCT ID</label><BR>
-                    <input name="product_id" type="hidden" value=""/><br><br>
+                    <input name="product_id" type="text" value=""/><br><br>
                     <label>QUANTITY</label><br>
-                    <input name="quantity" type="hidden" value=""/><br><br>
+                    <input name="quantity" type="text" value=""/><br><br>
                     <form action="view_products.html">
                     <button class="add_button" type="submit">Add to cart</button>
                     </form>
