modified login features[#161172351]

--- a/login.html
+++ b/login.html
@@ -8,8 +8,9 @@
 
     </head>
         <body background = "image/images.jpg">
+            <h1><i>Candiez store login</i></h1>
         <div class = "boxed">
-            <h1>LOGIN</h1>  
+            <h2>LOGIN</h2>  
             
             <label for = "Username">
                 <b>Username</b>
@@ -21,7 +22,11 @@
             </label><br>
             <input type = "password" placeholder="Password"><br>
             <form action="add.html">
-            <b><button input = "submit">LOGIN</button></b>
+            <b><button input = "submit">LOGIN</button></b><br>
+            </form>
+
+            <form action = "login2.html">
+                <b><button input = "submit"><i>Administrator Login</i></button></b>
             </form>
 
         </div>
