--- a/login2.html
+++ b/login2.html
@@ -8,8 +8,10 @@
 
     </head>
         <body background = "image/images.jpg">
+
+            <h1><i>Candiez Store Admin</i></h1>
         <div class = "boxed">
-            <h1>LOGIN</h1>  
+            <h2>LOGIN</h2>  
             
             <label for = "Username">
                 <b>Username</b>
