fixes for view individual product[#161502351]

--- a/view_products.html
+++ b/view_products.html
@@ -28,29 +28,37 @@
                 <td>Rolex</td>
                 <td>$170</td>
                 <td>50 pieces</td>
+                <form action="view_one.html">
                 <td><button type="submit">view</button></td>
+                </form>
             </tr>
             <tr>
                 <td>Masculine watches</td>
                 <td>Invista</td>
                 <td>$440</td>
                 <td>12 pieces</td>
+                <form action="view_one.html">
                 <td><button type="submit">view</button></td>
+                </form>
             </tr>
             <tr>
                 <td>Phones</td>
                 <td>Nokia 6</td>
                 <td>$190</td>
                 <td>7 pieces</td>
+                <form action="view_one.html">
                 <td><button type="submit">view</button></td>
-
+                </form>
             </tr>
             <tr>
                 <td>Phones</td>
                 <td>Iphone7</td>
                 <td>$448</td>
                 <td>13 pieces</td>
+                <form action="view_one.html">
                 <td><button type="submit">view</button></tr>
+                </form>
+
             </tr>
 
         </table>
