revised html and css [#161172351]

--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                 </form>
     
                 <form action = "login2.html">
-                    <b><button input = "submit"><i>Administrator Login</i></button></b>
+                    <b><button input = "submit"><i>Admin Login</i></button></b>
                 </form>
     
             </main>    
