--- a/sales.html
+++ b/sales.html
@@ -18,7 +18,7 @@
 
     </nav>
 
-    <h1 class="heading"><i>Number of sales</i></h1>
+    <h1 class="heading"><i>Sales per attendant</i></h1>
 
     <main class="boxed">
             <table>
