--- a/view_one.html
+++ b/view_one.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>View Product</title>
+    <title>View Single Product</title>
 </head>
 <body background = "image/images.jpg">
 
