modified and formatted [#161172351]

--- a/edit.html
+++ b/edit.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel = "stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Product modify</title>
 </head>
-<body background = "image/images.jpg">
 
-    <nav class = "topnav">
+<body background="image/images.jpg">
+
+    <nav class="topnav">
         <ul>
             <li><a href="view_products.html">Products</a></li>
             <li><a href="sales.html">Sales</a></li>
@@ -19,34 +21,33 @@
             <li><a href="index.html">Logout</a></li>
         </ul>
     </nav>
-    <main class = "boxed">
-        
+    <main class="boxed">
+
         <table>
-            <tr>
+            <thead>
                 <th>PRODUCT NAME</th>
                 <th>BRAND</th>
                 <th>EDIT</th>
-            </tr>
-            <tr>
+            </thead>
+            <tbody>
                 <td>Iphone 5</td>
                 <td>Phone</td>
-                <td><button type="submit">Edit</button><br>
-                <button type = "submit">Delete</button> </td>    
-            </tr>
-            <tr>
+                <td><button type="submit">Edit</button><br><button type="submit">Delete</button> </td>
+            </tbody>
+            <tbody>
                 <td>Samsung 32"</td>
                 <td>Television</td>
                 <td><button type="submit">Edit</button><br>
-                <button type = "submit">Delete</button> </td>    
-            </tr>
-            <tr>
+                    <button type="submit">Delete</button> </td>
+            </tbody>
+            <tbody>
                 <td>LG 28"</td>
                 <td>Television</td>
-                <td><button type="submit">Edit</button><br>
-                <button type = "submit">Delete</button> </td>    
-            </tr>
+                <td><button type="submit">Edit</button><br><button type="submit">Delete</button> </td>
+            </tbody>
 
         </table>
     </main>
 </body>
+
 </html>
