--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel = "stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Home Page</title>
 </head>
-<body background = "image/images.jpg">
 
-    <form action = "login.html">
-        <nav class = "topnav">
-            <ul>
-                <li><a href="login.html">LOGIN</a></li>
-            </ul>
-        </nav>
-    </form>
+<body background="image/images.jpg">
 
-    <h1 class="heading"><i>Candiez Store</i></h1>
-
-    <main class = "boxed">
+    <nav class="topnav">
+        <ul>
+            <li><a href="login.html">LOGIN</a></li>
+        </ul>
+    </nav>
+    <header>
+        <h1 class="heading"><i>Candiez Store</i></h1>
+    </header>
+    <main class="boxed">
         <section>
-            <h2>Welcome to Candiez Store</h2>
+            <header>
+                <h2>Welcome to Candiez Store</h2>
+            </header>
             <p>Where quality starts</p>
-            <h3>Slogan</h3>
+            <header>
+                <h3>Slogan</h3>
+            </header>
             <p>For Quality Service</p>
             <p>Do not be cheated.</p>
             <p>This is the place to be.</p>
@@ -32,9 +36,9 @@
             </footer>
 
         </section>
-    
-    </main>
-    
-</body>
-</html>
 
+    </main>
+
+</body>
+
+</html>
