--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 <body background="image/images.jpg">
     <main class="boxed">
         <h2>LOGIN</h2>
-        <form action="add.html"></form>
+        <form action="add.html">
         <label for="Username">
             <b>Username</b>
         </label><br>
@@ -24,7 +24,7 @@
         <input id="password" type="password" placeholder="Password"><br><br>
         <b><button input="submit">LOGIN</button></b><br><br>
         </form>
-        <li><a href="login2.html">Admin Login</a></li>
+        <li><a href="login2.html"><span class="black">Admin Login</span></a></li>
     </main>
 
 </body>
