--- a/login2.html
+++ b/login2.html
@@ -21,7 +21,7 @@
                 <b>Password</b>
             </label><br>
             <input id="password" type="password" placeholder="Password"><br><br>
-            <b><button input="submit">LOGIN</button></b>
+            <b><button input="submit">LOGIN</button></b><br><br>
         </form>
         <footer>
             <li><a href="login.html"><span class="black">Not Admin</span></a></li>
