--- a/view_products.html
+++ b/view_products.html
@@ -33,7 +33,7 @@
                 <td>$170</td>
                 <td>50 pieces</td>
                 <td>
-                    <li><a href="view_one.html">view</a></li>
+                    <li><a href="view_one.html"><span class="black">view</span></a></li>
                 </td>
             </tbody>
             <tbody>
@@ -42,7 +42,7 @@
                 <td>$440</td>
                 <td>12 pieces</td>
                 <td>
-                    <li><a href="view_one.html">view</a></li>
+                    <li><a href="view_one.html"><span class="black">view</span></a></li>
                 </td>
             </tbody>
             <tbody>
@@ -51,7 +51,7 @@
                 <td>$190</td>
                 <td>7 pieces</td>
                 <td>
-                    <li><a href="view_one.html">view</a></li>
+                    <li><a href="view_one.html"><span class="black">view</span></a></li>
                 </td>
             </tbody>
             <tbody>
