modified tabling and naming of classes and idz[#161172351]

--- a/add.html
+++ b/add.html
@@ -21,17 +21,17 @@
     <main class="boxed">
         <h1>New Product</h1>
         <form action="view_products.html">
-            <label for="Product Name">PRODUCT NAME</label><br>
-            <input id="name" name="product_name" type="text" placeholder="Product Name" /><br>
-            <label for="Product Id">PRODUCT ID</label><br>
-            <input id="productid" name="product_id" type="text" placeholder="Product Id" /><br>
+            <label for="ProductName">PRODUCT NAME</label><br>
+            <input id="ProductName" name="product_name" type="text" placeholder="Product Name" /><br>
+            <label for="ProductId">PRODUCT ID</label><br>
+            <input id="ProductId" name="product_id" type="text" placeholder="Product Id" /><br>
             <label for="Quantity">QUANTITY</label><br>
-            <input id="quantity" name="quantity" type="text" placeholder="Quantity" /><br>
+            <input id="Quantity" name="quantity" type="text" placeholder="Quantity" /><br>
             <label for="Brand">BRAND</label><br>
-            <input id="brand" name="brand" type="text" placeholder="Brand" /><br>
+            <input id="Brand" name="brand" type="text" placeholder="Brand" /><br>
             <label for="Price">PRICE</label><br>
-            <input id="price" name="price" type="text" placeholder="Price" /><br><br>
-            <button class="nav" type="submit">Add to cart</button>
+            <input id="Price" name="price" type="text" placeholder="Price" /><br><br>
+            <button class="SButton" type="submit">Add to cart</button>
         </form>
     </main>
 </body>
