--- a/login.html
+++ b/login.html
@@ -13,14 +13,14 @@
     <main class="boxed">
         <h2>LOGIN</h2>
         <form action="add.html">
-            <label for="Username">
+            <label for="username2">
                 <b>Username</b>
             </label><br>
-            <input id="username" type="text" placeholder="Username"><br>
-            <label for="Password">
+            <input id="username2" type="text" placeholder="Username"><br>
+            <label for="password2">
                 <b>Password</b>
             </label><br>
-            <input id="password" type="password" placeholder="Password"><br><br>
+            <input id="password2" type="password" placeholder="Password"><br><br>
             <b><button input="submit">LOGIN</button></b><br><br>
         </form>
         <li><a href="login2.html"><span class="black">Admin Login</span></a></li>
