--- a/sales.html
+++ b/sales.html
@@ -24,21 +24,22 @@
 
     <main class="boxed">
         <table>
-            <tr>
+            <thead>
                 <th>SALER</th>
-                <td>Store attendant 1</td>
-                <td>Store attendant 2</td>
-                <td><b>Total</b></td>
-
-            </tr>
-            <tr>
-                <th>NO. OF SALES</th>
-                <td>50</td>
-                <td>16</td>
-                <td><b>66</b></td>
-
-            </tr>
-
+                <th>NO. OF SALES</th> 
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Store attendant 1</td>
+                    <td>Store attendant 2</td>
+                    <td><b>Total</b></td>
+                </tr>
+                <tr>
+                    <td>50</td>
+                    <td>16</td>
+                    <td><b>66</b></td>
+                </tr>
+            </tbody>
         </table>
 
 
