--- a/view_products.html
+++ b/view_products.html
@@ -20,6 +20,7 @@
     </nav>
     <main class="boxed">
         <table>
+
             <thead>
                 <th><b>Product</b></th>
                 <th><b>Brand</b></th>
@@ -27,41 +28,39 @@
                 <th><b>Quantity</b></th>
                 <th></th>
             </thead>
+
             <tbody>
-                <td>Feminine watches</td>
-                <td>Rolex</td>
-                <td>$170</td>
-                <td>50 pieces</td>
-                <td>
-                    <li><a href="view_one.html"><span class="black">view</span></a></li>
-                </td>
-            </tbody>
-            <tbody>
-                <td>Masculine watches</td>
-                <td>Invista</td>
-                <td>$440</td>
-                <td>12 pieces</td>
-                <td>
-                    <li><a href="view_one.html"><span class="black">view</span></a></li>
-                </td>
-            </tbody>
-            <tbody>
-                <td>Phones</td>
-                <td>Nokia 6</td>
-                <td>$190</td>
-                <td>7 pieces</td>
-                <td>
-                    <li><a href="view_one.html"><span class="black">view</span></a></li>
-                </td>
-            </tbody>
-            <tbody>
-                <td>Phones</td>
-                <td>Iphone7</td>
-                <td>$448</td>
-                <td>13 pieces</td>
-                <td>
-                    <li><a href="view_one.html">view</a></li>
-                </td>
+                <tr>
+                    <td>Feminine watches</td>
+                    <td>Rolex</td>
+                    <td>$170</td>
+                    <td>50 pieces</td>
+                    <td><li><a href="view_one.html"><span class="black">view</span></a></li></td>
+                </tr>
+                
+                <tr>
+                    <td>Masculine watches</td>
+                    <td>Invista</td>
+                    <td>$440</td>
+                    <td>12 pieces</td>
+                    <td><li><a href="view_one.html"><span class="black">view</span></a></li></td>
+                </tr>
+
+                <tr>
+                    <td>Phones</td>
+                    <td>Nokia 6</td>
+                    <td>$190</td>
+                    <td>7 pieces</td>
+                    <td><li><a href="view_one.html"><span class="black">view</span></a></li></td>
+                </tr>
+
+                <tr>
+                    <td>Phones</td>
+                    <td>Iphone7</td>
+                    <td>$448</td>
+                    <td>13 pieces</td>
+                    <td><li><a href="view_one.html">view</a></li></td>
+                </tr>
             </tbody>
         </table>
     </main>
