--- a/login2.html
+++ b/login2.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <title>register New attendant</title>
+    <title>Register New attendant</title>
 </head>
 
 <body background="image/images.jpg">
     <main class="boxed">
-        <h1><i> Admin Login</i></h1>
+        <h1>Admin Login</h1>
         <form action="register.html">
-            <label for="Username">
+            <label for="username1">
                 <b>Username</b>
             </label><br>
-            <input id="username" type="text" placeholder="Username"><br>
-            <label for="Password">
+            <input id="username1" type="text" placeholder="Username"><br>
+            <label for="Password1">
                 <b>Password</b>
             </label><br>
-            <input id="password" type="password" placeholder="Password"><br><br>
+            <input id="Password1" type="password" placeholder="Password"><br><br>
             <b><button input="submit">LOGIN</button></b><br><br>
         </form>
         <footer>
