--- a/register.html
+++ b/register.html
@@ -26,13 +26,13 @@
       <h1><i>REGISTER</i></h1>
 
       <form action="edit.html">
-         <label for="first name">
+         <label for="firstname">
             <b> First Name</b>
          </label><br>
          <input id="firstname" type="text" placeholder="First Name">
          <br>
 
-         <label for="last name">
+         <label for="lastname">
             <b>Last Name</b>
          </label><br>
          <input id="lastname" type="text" placeholder="Last Name">
@@ -41,13 +41,13 @@
          <label for="username">
             <b>Username</b>
          </label><br>
-         <input id="username1" type="text" placeholder="Username">
+         <input id="username" type="text" placeholder="Username">
          <br>
 
          <label for="contact">
             <b> Contact</b>
          </label><br>
-         <input id="number" type="tel" placeholder="Telephone Number">
+         <input id="contact" type="tel" placeholder="Telephone Number">
          <br>
 
          <label for="email">
@@ -59,13 +59,13 @@
          <label for="password">
             <b> Create Password</b>
          </label><br>
-         <input id="cre_password" type="password" placeholder="Create Password">
+         <input id="password" type="password" placeholder="Create Password">
          <br>
 
-         <label for="password">
+         <label for="confirmPassword">
             <b>Confirm Password</b>
          </label><br>
-         <input id="passwordcon" type="password" placeholder="Confirm Password">
+         <input id="confirmPassword" type="password" placeholder="Confirm Password">
          <br>
          <button type="submit">REGISTER</button>
       </form>
